--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,9 @@ h2 {
 	font-size: 50px;
 }
 
+::placeholder {
+	text-transform: lowercase;
+}
 
 #body-wrapper {
 	height: 800px;
@@ -30,6 +33,8 @@ h2 {
 	width: 200px;
     height: 25px;
     font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 /* Høyre side */
